--- a/Project-2/As2Ex4-1(public increased).ipynb
+++ b/Project-2/As2Ex4-1(public increased).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
     "#Opt3 = public transport\n",
     "#Opt4 = driving\n",
     "\n",
-    "\n",
+    "cost_public = DefineVariable('cost_public', cost_transit, database)\n",
     "cost_public_inc = DefineVariable('cost_public_inc', cost_transit*1.15, database)\n",
     "dur_public = DefineVariable('dur_public', (dur_pt_access + dur_pt_rail + dur_pt_bus + dur_pt_int),database)\n",
     "cost_driving = DefineVariable('cost_driving', (cost_driving_ccharge + cost_driving_fuel), database)\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -130,10 +130,10 @@
      "text": [
       "Predicted market shares:\n",
       "\n",
-      "marketShare_walking: 17.63% (15.91%, 19.73%)\n",
-      "marketShare_cycling: 2.87% (2.26%, 5.90%)\n",
-      "marketShare_public: 35.98% (33.02%, 39.72%)\n",
-      "marketShare_car: 43.52% (37.97%, 45.94%)\n"
+      "marketShare_walking: 17.63% (15.70%, 19.79%)\n",
+      "marketShare_cycling: 2.87% (2.19%, 6.63%)\n",
+      "marketShare_public: 35.98% (33.30%, 40.47%)\n",
+      "marketShare_car: 43.52% (35.99%, 45.87%)\n"
      ]
     }
    ],
@@ -158,7 +158,9 @@
     "            'Weighted prob. walking': sample_normalized_weight * prob_walking,\n",
     "            'Weighted prob. cycling': sample_normalized_weight * prob_cycling,\n",
     "            'Weighted prob. public': sample_normalized_weight * prob_public,\n",
-    "            'Weighted prob. car': sample_normalized_weight * prob_car\n",
+    "            'Weighted prob. car': sample_normalized_weight * prob_car,\n",
+    "            'Revenue public': prob_public * cost_public_inc,\n",
+    "            'Revenue driving': prob_car * cost_driving\n",
     "           }\n",
     "\n",
     "\n",
@@ -196,6 +198,28 @@
     "    l = left[f\"Weighted prob. {temp_names[i].split('_')[1]}\"].mean()*100\n",
     "    r = right[f\"Weighted prob. {temp_names[i].split('_')[1]}\"].mean()*100\n",
     "    print(f\"{temp_names[i]}: {lst_marketShares[i]:.2f}% ({l:.2f}%, {r:.2f}%)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8067996475494048"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# revenue for public transport\n",
+    "revenue_public = simulated_values[\"Revenue public\"].mean()\n",
+    "revenue_public"
    ]
   },
   {
