--- a/Project-2/As2Ex4-2(driving increased).ipynb
+++ b/Project-2/As2Ex4-2(driving increased).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
     "#Opt4 = driving\n",
     "\n",
     "\n",
-    "cost_public = DefineVariable('cost_public_inc', cost_transit, database)\n",
+    "cost_public = DefineVariable('cost_public', cost_transit, database)\n",
     "dur_public = DefineVariable('dur_public', (dur_pt_access + dur_pt_rail + dur_pt_bus + dur_pt_int),database)\n",
     "cost_driving_inc = DefineVariable('cost_driving', (cost_driving_ccharge + cost_driving_fuel)*1.15, database)\n",
     "\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -130,10 +130,10 @@
      "text": [
       "Predicted market shares:\n",
       "\n",
-      "marketShare_walking: 17.62% (15.81%, 20.22%)\n",
-      "marketShare_cycling: 2.85% (2.18%, 5.90%)\n",
-      "marketShare_public: 36.77% (33.96%, 41.44%)\n",
-      "marketShare_car: 42.76% (35.75%, 45.16%)\n"
+      "marketShare_walking: 17.62% (15.66%, 19.67%)\n",
+      "marketShare_cycling: 2.85% (2.21%, 5.61%)\n",
+      "marketShare_public: 36.77% (34.19%, 40.57%)\n",
+      "marketShare_car: 42.76% (37.72%, 45.16%)\n"
      ]
     }
    ],
@@ -157,7 +157,9 @@
     "            'Weighted prob. walking': sample_normalized_weight * prob_walking,\n",
     "            'Weighted prob. cycling': sample_normalized_weight * prob_cycling,\n",
     "            'Weighted prob. public': sample_normalized_weight * prob_public,\n",
-    "            'Weighted prob. car': sample_normalized_weight * prob_car\n",
+    "            'Weighted prob. car': sample_normalized_weight * prob_car,\n",
+    "            'Revenue public': prob_public * cost_public,\n",
+    "            'Revenue driving': prob_car * cost_driving_inc\n",
     "           }\n",
     "\n",
     "\n",
@@ -193,6 +195,28 @@
     "    l = left[f\"Weighted prob. {temp_names[i].split('_')[1]}\"].mean()*100\n",
     "    r = right[f\"Weighted prob. {temp_names[i].split('_')[1]}\"].mean()*100\n",
     "    print(f\"{temp_names[i]}: {lst_marketShares[i]:.2f}% ({l:.2f}%, {r:.2f}%)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "72.44260361134997"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# revenue for public transport\n",
+    "revenue_public = simulated_values[\"Revenue public\"].mean()*100\n",
+    "revenue_public"
    ]
   },
   {
