--- a/Project-2/As2Ex4-1(public increased).ipynb
+++ b/Project-2/As2Ex4-1(public increased).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,10 +130,10 @@
      "text": [
       "Predicted market shares:\n",
       "\n",
-      "marketShare_walking: 17.63% (15.70%, 19.79%)\n",
-      "marketShare_cycling: 2.87% (2.19%, 6.63%)\n",
-      "marketShare_public: 35.98% (33.30%, 40.47%)\n",
-      "marketShare_car: 43.52% (35.99%, 45.87%)\n"
+      "marketShare_walking: 17.63% (15.83%, 20.16%)\n",
+      "marketShare_cycling: 2.87% (2.26%, 6.45%)\n",
+      "marketShare_public: 35.98% (33.03%, 39.69%)\n",
+      "marketShare_car: 43.52% (37.74%, 45.65%)\n"
      ]
     }
    ],
@@ -202,24 +202,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8067996475494048"
+       "4033.998237747024"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# revenue for public transport\n",
-    "revenue_public = simulated_values[\"Revenue public\"].mean()\n",
-    "revenue_public"
+    "revenue_public_avg = simulated_values[\"Revenue public\"].mean()\n",
+    "revenue_public_total = simulated_values[\"Revenue public\"].sum()\n",
+    "revenue_public_total"
    ]
   },
   {
