--- a/Project-2/As2Ex4-2(driving increased).ipynb
+++ b/Project-2/As2Ex4-2(driving increased).ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,10 +130,10 @@
      "text": [
       "Predicted market shares:\n",
       "\n",
-      "marketShare_walking: 17.62% (15.66%, 19.67%)\n",
-      "marketShare_cycling: 2.85% (2.21%, 5.61%)\n",
-      "marketShare_public: 36.77% (34.19%, 40.57%)\n",
-      "marketShare_car: 42.76% (37.72%, 45.16%)\n"
+      "marketShare_walking: 17.62% (15.75%, 19.89%)\n",
+      "marketShare_cycling: 2.85% (2.18%, 6.07%)\n",
+      "marketShare_public: 36.77% (34.11%, 40.62%)\n",
+      "marketShare_car: 42.76% (36.94%, 45.00%)\n"
      ]
     }
    ],
@@ -199,24 +199,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "72.44260361134997"
+       "3622.130180567498"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# revenue for public transport\n",
-    "revenue_public = simulated_values[\"Revenue public\"].mean()*100\n",
-    "revenue_public"
+    "revenue_public_avg = simulated_values[\"Revenue public\"].mean()\n",
+    "revenue_public_total = simulated_values[\"Revenue public\"].sum()\n",
+    "revenue_public_total"
    ]
   },
   {
