--- a/Project-2/As2Ex3.ipynb
+++ b/Project-2/As2Ex3.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,23 +181,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "71.54268785491254"
+       "3577.1343927456273"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "revenue_public = simulated_values[\"Revenue public\"].mean() * 100\n",
-    "revenue_public"
+    "revenue_public_avg = simulated_values[\"Revenue public\"].mean()\n",
+    "revenue_public_total = simulated_values[\"Revenue public\"].sum()\n",
+    "\n",
+    "revenue_public_total"
    ]
   },
   {
