--- a/labs/lab8/Netherlands_Base_Simul.ipynb
+++ b/labs/lab8/Netherlands_Base_Simul.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-11-09T15:31:48.990979Z",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-11-09T15:31:50.008744Z",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-11-09T15:31:50.965003Z",
@@ -133,17 +133,42 @@
     "\n",
     "VOT_car = Derive(V_CAR, \"car_time\")/Derive(V_CAR, \"car_cost_euro\")\n",
     "VOT_rail = Derive(V_RAIL, \"rail_time\")/Derive(V_RAIL, \"rail_cost_euro\")\n",
+    "elast_car_time = Derive(prob_car, \"car_time\") * car_time / prob_car\n",
+    "elast_car_cost = Derive(prob_car, \"car_cost_euro\") * car_cost_euro / prob_car\n",
+    "elast_rail_time = Derive(prob_rail, \"rail_time\") * rail_time / prob_rail\n",
+    "elast_rail_cost = Derive(prob_rail, \"rail_cost_euro\") * rail_cost_euro / prob_rail\n",
+    "\n",
+    "# cross-elast\n",
+    "# Elasticity of the share of car with respect to travel time by rail:\n",
+    "elast_car_time_rail = Derive(prob_car, \"rail_time\") * rail_time/prob_car\n",
+    "\n",
+    "#Elasticity of the share of car with respect to the cost of rail:\n",
+    "elast_car_cost_rail = Derive(prob_car, \"rail_cost_euro\") * rail_cost_euro / prob_car\n",
+    "\n",
+    "# Elasticity of the share of rail with respect to travel time by car:\n",
+    "elast_rail_time_car = Derive(prob_rail, \"car_time\") * car_time / prob_rail\n",
+    "\n",
+    "# Elasticity of the share of rail with respect to the cost of car:\n",
+    "elast_rail_cost_car = Derive(prob_rail, \"car_cost_euro\") * car_cost_euro/ prob_rail\n",
     "\n",
     "\n",
     "simulate = {\n",
-    "'Weighted prob. car': sampleNormalizedWeight * prob_car,\n",
-    "'Weighted prob. rail': sampleNormalizedWeight * prob_rail,\n",
-    "'Prob. car': prob_car,\n",
-    "'Prob. rail': prob_rail,\n",
-    "'VOT car': VOT_car,\n",
-    "'VOT rail': VOT_rail,\n",
-    "'Weighted VOT car': sampleNormalizedWeight * VOT_car,\n",
-    "'Weighted VOT rail': sampleNormalizedWeight * VOT_rail\n",
+    "    'Weighted prob. car': sampleNormalizedWeight * prob_car,\n",
+    "    'Weighted prob. rail': sampleNormalizedWeight * prob_rail,\n",
+    "    'Prob. car': prob_car,\n",
+    "    'Prob. rail': prob_rail,\n",
+    "    'VOT car': VOT_car,\n",
+    "    'VOT rail': VOT_rail,\n",
+    "    'Weighted VOT car': sampleNormalizedWeight * VOT_car,\n",
+    "    'Weighted VOT rail': sampleNormalizedWeight * VOT_rail,\n",
+    "    'elast_car_time': elast_car_time,\n",
+    "    'elast_car_cost': elast_car_cost,\n",
+    "    'elast_rail_time': elast_rail_time,\n",
+    "    'elast_rail_cost': elast_rail_cost,\n",
+    "    'elast_car_time_rail': elast_car_time_rail,\n",
+    "    'elast_car_cost_rail': elast_car_cost_rail,\n",
+    "    'elast_rail_time_car': elast_rail_time_car,\n",
+    "    'elast_rail_cost_car': elast_rail_cost_car\n",
     "}\n",
     "\n",
     "biogeme = bio.BIOGEME(database, simulate)\n",
@@ -202,6 +227,174 @@
     "VOT_rail_est = simulatedValues[\"Weighted VOT rail\"].mean()\n",
     "\n",
     "VOT_car_est, VOT_rail_est #eur/h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-0.9895461886606098,\n",
+       " -0.2329945461672524,\n",
+       " -0.47110181414387803,\n",
+       " -0.8237970407512029,\n",
+       " 0.2655450069306837,\n",
+       " 0.4643480121028476,\n",
+       " 1.7555479955940632,\n",
+       " 0.4133542357046628)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# elasticities\n",
+    "\n",
+    "normalization_car = simulatedValues['Weighted prob. car'].sum()\n",
+    "normalization_rail = simulatedValues['Weighted prob. rail'].sum()\n",
+    "\n",
+    "agg_elast_car_time = (simulatedValues['Weighted prob. car']\n",
+    "* simulatedValues['elast_car_time'] / normalization_car).sum()\n",
+    "agg_elast_car_cost = (simulatedValues['Weighted prob. car']\n",
+    "* simulatedValues['elast_car_cost'] / normalization_car).sum()\n",
+    "agg_elast_rail_time = (simulatedValues['Weighted prob. rail']\n",
+    "* simulatedValues['elast_rail_time'] / normalization_rail).sum()\n",
+    "agg_elast_rail_cost = (simulatedValues['Weighted prob. rail']\n",
+    "* simulatedValues['elast_rail_cost'] / normalization_rail).sum()\n",
+    "\n",
+    "agg_elast_car_time_rail = (simulatedValues['Weighted prob. car']\n",
+    "* simulatedValues['elast_car_time_rail'] / normalization_car).sum()\n",
+    "agg_elast_car_cost_rail = (simulatedValues['Weighted prob. car']\n",
+    "* simulatedValues['elast_car_cost_rail'] / normalization_car).sum()\n",
+    "agg_elast_rail_time_car=  (simulatedValues['Weighted prob. rail']\n",
+    "* simulatedValues['elast_rail_time_car'] / normalization_rail).sum()\n",
+    "agg_elast_rail_cost_car = (simulatedValues['Weighted prob. rail']\n",
+    "* simulatedValues['elast_rail_cost_car'] / normalization_rail).sum()\n",
+    "\n",
+    "\n",
+    "agg_elast_car_time, agg_elast_car_cost, agg_elast_rail_time, agg_elast_rail_cost, agg_elast_car_time_rail,\\\n",
+    "agg_elast_car_cost_rail, agg_elast_rail_time_car, agg_elast_rail_cost_car"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# forecasting\n",
+    "\n",
+    "\n",
+    "# Compute the predicted market shares for an increase of the cost of rail of 10%.\n",
+    "\n",
+    "\n",
+    "pandas = pd.read_table(\"netherlandsRP_w.dat\")\n",
+    "database = db.Database(\"netherlands\",pandas)\n",
+    "pd.options.display.float_format = '{:.3g}'.format\n",
+    "\n",
+    "globals().update(database.variables)\n",
+    "\n",
+    "#MODEL SPECIFICATION (from estimation file)\n",
+    "ASC_CAR = Beta('ASC_CAR',0,-10,10,0)\n",
+    "ASC_RAIL = Beta('ASC_RAIL',0,-10,10,1)\n",
+    "BETA_TIME_RAIL = Beta('BETA_TIME_RAIL',0,-10,10,0)\n",
+    "BETA_TIME_CAR = Beta('BETA_TIME_CAR',0,-10,10,0)\n",
+    "BETA_COST_AGE1 = Beta('BETA_COST_AGE1',0,-10,10,0)\n",
+    "BETA_COST_AGE2 = Beta('BETA_COST_AGE2',0,-10,10,0)\n",
+    "BETA_FEMALE = Beta('BETA_FEMALE',0,-10,10,0)\n",
+    "BETA_FIXED_ARRIVAL_TIME = Beta('BETA_FIXED_ARRIVAL_TIME',0,-10,10,0)\n",
+    "\n",
+    "rail_time  = DefineVariable('rail_time',rail_ivtt + rail_acc_time + rail_egr_time, database)\n",
+    "car_time = DefineVariable('car_time',car_ivtt + car_walk_time, database)\n",
+    "\n",
+    "rate_G2E  = DefineVariable('rate_G2E',0.44378022,database) #from Guilders to euros\n",
+    "car_cost_euro  = DefineVariable('car_cost_euro',car_cost * rate_G2E,database)\n",
+    "rail_cost_euro  = DefineVariable('rail_cost_euro', rail_cost * rate_G2E,database)\n",
+    "rail_cost_euro_inc = DefineVariable('rail_cost_euro_inc', rail_cost_euro * 1.1, database)\n",
+    "\n",
+    "age1 = DefineVariable('age1',(age == 0), database) #40 years or younger\n",
+    "age2 = DefineVariable('age2',(age == 1), database) #41 years or older\n",
+    "employed = DefineVariable('employed',(employ_status == 0), database)\n",
+    "\n",
+    "# Utilities\n",
+    "V_CAR = ASC_CAR + BETA_TIME_CAR * car_time + BETA_COST_AGE1 * car_cost_euro * age1 + BETA_COST_AGE2 * car_cost_euro  * age2\n",
+    "V_RAIL = BETA_TIME_RAIL * rail_time + BETA_COST_AGE1 * rail_cost_euro_inc * age1 + BETA_COST_AGE2 *\\\n",
+    "rail_cost_euro_inc * age2 + BETA_FEMALE * gender + BETA_FIXED_ARRIVAL_TIME * arrival_time\n",
+    "\n",
+    "V = {0: V_CAR, 1: V_RAIL}\n",
+    "av = {0: 1,1: 1}\n",
+    "\n",
+    "prob_car = logit(V,av,0)\n",
+    "prob_rail = logit(V,av,1)\n",
+    "\n",
+    "simulate = {\n",
+    "    'Weighted prob. car': sampleNormalizedWeight * prob_car,\n",
+    "    'Weighted prob. rail': sampleNormalizedWeight * prob_rail,\n",
+    "    'Prob. car': prob_car,\n",
+    "    'Prob. rail': prob_rail,\n",
+    "    \"Revenue car\": prob_car * car_cost_euro, \n",
+    "    \"Revenue rail\": prob_rail * rail_cost_euro_inc\n",
+    "}\n",
+    "\n",
+    "biogeme = bio.BIOGEME(database, simulate)\n",
+    "biogeme.modelName = \"Netherlands_Base_Simul_inc\"\n",
+    "\n",
+    "betas = biogeme.freeBetaNames\n",
+    "results = res.bioResults(pickleFile = 'Netherlands_Base_Model.pickle')\n",
+    "betaValues = results.getBetaValues()\n",
+    "\n",
+    "simulatedValues = biogeme.simulate(betaValues)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(886.6880700491995, 1171.115934060958)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rev_car = simulatedValues[\"Revenue car\"].sum()\n",
+    "rev_rail = simulatedValues[\"Revenue rail\"].sum()\n",
+    "\n",
+    "rev_car, rev_rail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(66.83988273714051, 33.16011726285949)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "marketShare_car = 100*simulatedValues[\"Weighted prob. car\"].mean()\n",
+    "marketShare_rail = 100*simulatedValues[\"Weighted prob. rail\"].mean()\n",
+    "\n",
+    "marketShare_car, marketShare_rail"
    ]
   },
   {
